Actualizacion de docker y test